--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/vim-markdown"]
 	path = bundle/vim-markdown
 	url = git@github.com:plasticboy/vim-markdown.git
+[submodule "bundle/vim-vagrant"]
+	path = bundle/vim-vagrant
+	url = git://github.com/markcornick/vim-vagrant.git
