--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,6 @@
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
 	url = git@github.com:rodjek/vim-puppet.git
-[submodule "bundle/vim-airline"]
-	path = bundle/vim-airline
-	url = git@github.com:bling/vim-airline.git
 [submodule "bundle/vim-trailing-whitespace"]
 	path = bundle/vim-trailing-whitespace
 	url = git@github.com:bronson/vim-trailing-whitespace.git
@@ -25,3 +22,6 @@
 [submodule "bundle/vim-vagrant"]
 	path = bundle/vim-vagrant
 	url = git://github.com/markcornick/vim-vagrant.git
+[submodule "bundle/lucius"]
+	path = bundle/lucius
+	url = git@github.com:jonathanfilip/vim-lucius.git
